Fix cutoff at top

--- a/client/src/pages/Calendar.scss
+++ b/client/src/pages/Calendar.scss
@@ -34,6 +34,7 @@
   .EventCalendar {
     display: none;
     width: 100%;
+    margin-top: 5rem;
 
     .picker {
       background-color: $color-2;
